--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <p>
-    <span class="js"> ------ </span> Focus on yourself <span class="typed-text"></span>
+    <span class="js"> ------ </span> Labyu  <span class="typed-text"></span>
     <span class="cursor">&nbsp;</span>
     </p>
 
